# conan_workshop

./: LICENSE  README.md  docker-compose.yml
docker/: docker-compose.yml
src/00_before_start/: README.md
src/01_artifactory_conan_preparation/: README.md
src/02_first_conan_package/: README.md
src/02_first_conanfile_recipe/: README.md
src/03_packaging_cpp_binaries/: README.md
src/03_packaging_cpp_binaries/greeter/: conanfile.py
src/03_packaging_cpp_binaries/greeter/src/: greeter.cpp
src/03_packaging_cpp_binaries/solution/test_package/: conanfile.py
src/03_your_own_dependency_tree/: README.md
src/03_your_own_dependency_tree/greeter/test_package/: conanfile.py
src/03_your_own_dependency_tree/solution/: CMakeLists.txt  conandata.yml  conanfile.py
src/04_conan_config_and_profiles/: README.md
